NXT-4383: New WorkflowEnt.isProjectExecuting-property
NXT-4383 (Long-running editing jobs)